--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -33,6 +33,9 @@ teca_add_app(teca_tc_trajectory LIBS ${teca_app_link}
 teca_add_app(teca_metadata_probe LIBS ${teca_app_link}
     FEATURES (TECA_HAS_BOOST AND TECA_HAS_NETCDF AND TECA_HAS_UDUNITS))
 
+teca_add_app(teca_moisture_density LIBS ${teca_app_link}
+    FEATURES (TECA_HAS_BOOST AND TECA_HAS_NETCDF))
+
 teca_py_install_apps(
     teca_convert_table.py
     teca_dataset_metadata.py
