--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,26 +163,9 @@ set(TECA_HAS_OPENSSL ${tmp} CACHE BOOL "OpenSSL features")
 
 # configure for Python
 set(tmp OFF)
-find_package(PythonInterp)
-if(PYTHONINTERP_FOUND)
-    find_program(PYTHON_CONFIG_EXECUTABLE python-config)
-    if (NOT PYTHON_CONFIG_EXECUTABLE)
-        message(SEND_ERROR "python-config executable is required.")
-    endif()
-    execute_process(COMMAND ${PYTHON_CONFIG_EXECUTABLE} --prefix
-        OUTPUT_VARIABLE python_prefix OUTPUT_STRIP_TRAILING_WHITESPACE)
-    set(PYTHON_INCLUDE_DIR ${python_prefix}/include/python2.7)
-    if (EXISTS ${python_prefix}/lib/libpython2.7${CMAKE_SHARED_LIBRARY_SUFFIX})
-        set(PYTHON_LIBRARY ${python_prefix}/lib/libpython2.7${CMAKE_SHARED_LIBRARY_SUFFIX})
-    elseif (EXISTS ${python_prefix}/lib64/libpython2.7${CMAKE_SHARED_LIBRARY_SUFFIX})
-        set(PYTHON_LIBRARY ${python_prefix}/lib64/libpython2.7${CMAKE_SHARED_LIBRARY_SUFFIX})
-    elseif (EXISTS ${python_prefix}/lib/x86_64-linux-gnu/libpython2.7${CMAKE_SHARED_LIBRARY_SUFFIX})
-        set(PYTHON_LIBRARY ${python_prefix}/lib/x86_64-linux-gnu/libpython2.7${CMAKE_SHARED_LIBRARY_SUFFIX})
-    else()
-        message(SEND_ERROR "Failed to locate Python library for ${python_prefix}")
-    endif()
-endif()
-find_package(PythonLibs)
+find_package(PythonInterp 3)
+find_package(PythonLibs 3)
+#find_package(Python COMPONENTS Interpreter Development)
 find_package(Numpy)
 find_program(swig_cmd NAMES swig swig3.0)
 find_package(Mpi4Py)
